# monopoly

./: Cargo.toml  README.md
config/: game.toml  ui.toml
config/boards/: standard.toml
config/cards/: standard.toml
crates/monopoly-client/: Cargo.toml
crates/monopoly-client/src/: connection.rs  main.rs  network_thread.rs
crates/monopoly-client/src/screens/: connect.rs  game.rs  gameover.rs  lobby.rs  mod.rs
crates/monopoly-client/src/screens/game/: board.rs  card_detail.rs  card_panel.rs  mod.rs  sidebar.rs  tooltip.rs  trade.rs
crates/monopoly-client/src/theme/: classic.rs  midnight.rs  mod.rs  retro.rs
crates/monopoly-core/: Cargo.toml
crates/monopoly-core/src/: bankruptcy.rs  board.rs  buildings.rs  buying.rs  cards.rs  dice.rs  jail.rs  lib.rs  loader.rs  movement.rs  network.rs  player.rs  rent.rs  ruleset.rs  state.rs  trading.rs
crates/monopoly-server/: Cargo.toml
crates/monopoly-server/src/: engine.rs  lobby.rs  main.rs  session.rs
