[workspace]
members = [
    "crates/monopoly-core",
    "crates/monopoly-server",
    "crates/monopoly-client",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Azeltron"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
thiserror = "1"
anyhow = "1"
rand = "0.8"
