[package]
name = "monopoly-core"
description = "Pure game logic — no networking, no rendering"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
